--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,viewport-fit=cover">
     <meta name="theme-color" content="#000000">
     <title>云南省新型肺炎疫情实时动态 - GenkiCat</title>
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=hSQGVGCyBGnaQ9zsZ7eC7mcuC8xMGYGq"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=hSQGVGCyBGnaQ9zsZ7eC7mcuC8xMGYGq"></script>
   </head>
   <body>
     <div id="app"></div>
